# learn

./: .gitignore  .gitlab-ci.yml  ruff.toml
.github/workflows/: build.yml  tests.yml
backend/: compose.yml
backend/authentication/: .gitlab-ci.yml  Dockerfile  alembic.ini  pyproject.toml
backend/authentication/src/: logger.py  main.py  middleware.py
backend/authentication/src/auth/: dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/authentication/src/config/: __init__.py  db.py  env.py  security.py
backend/authentication/src/migrations/: env.py
backend/authentication/src/migrations/versions/: 9441285f99dd_user_init.py  c4cca8088630_user_added_is_active.py
backend/authentication/tests/: conftest.py  test_api.py  test_jwt.py  test_user.py
